# cdk-fastapi

./: app.py  pyproject.toml
cdk_fastapi/: cdk_fastapi_stack.py
lambda/api/: main.py  pyproject.toml
tests/unit/: test_cdk_fastapi_stack.py
